--- a/simba.html
+++ b/simba.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Team-Simba Project</title>
 
     <link rel="stylesheet" href="simba.css">
     <script src="simba.js"></script>
@@ -17,11 +17,10 @@
     <button id = "play" onclick="play()">Play</button>
 
 
- 
-    <button id = "theme" onclick="theme()">christmas</button>
-    <button id = "theme" onclick="theme()">york</button>
-    <button id = "theme" onclick="theme()">halloween</button>
-    <button id = "theme" onclick="theme()">etc</button>
+    <button id="theme" onclick="theme1()">Christmas</button>
+    <button id="theme" onclick="theme2()">York</button>
+    <button id="theme" onclick="theme3()">Halloween</button>
+    <button id="theme" onclick="theme4()">Forest</button>
 
 
 
