--- a/simba.html
+++ b/simba.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Team-Simba Project</title>
 
     <link rel="stylesheet" href="simba.css">
     <script src="simba.js"></script>
 </head>
-<body>
+<body id="body">
 
     <h1> The Student Lottery </h1>
 
@@ -18,10 +18,10 @@
 
 
  
-    <button id = "theme" onclick="theme()">christmas</button>
-    <button id = "theme" onclick="theme()">york</button>
-    <button id = "theme" onclick="theme()">halloween</button>
-    <button id = "theme" onclick="theme()">etc</button>
+    <button id = "theme" onclick="theme1()">Christmas</button>
+    <button id = "theme" onclick="theme2()">Tork</button>
+    <button id = "theme" onclick="theme3()">Halloween</button>
+    <button id = "theme" onclick="theme4()">Forest</button>
 
 
 
